// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal/Modal integration renders correctly 1`] = `
.emotion-9 {
  color: #3c3c3c;
  opacity: 1;
  pointer-events: visible;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.emotion-8 {
  background-color: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 10001;
}

.emotion-7 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 50%;
  height: 300px;
  width: 400px;
  opacity: 1;
  outline: none;
  position: fixed;
  top: 128px;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  z-index: 1001;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  min-height: 152px;
}

.emotion-5 {
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: auto;
  overflow-y: auto;
  padding: 24px;
}

.emotion-4 {
  font-size: 20px;
  font-weight: 600;
  line-height: 1.66666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  min-height: 60px;
  z-index: 1002;
}

.emotion-3 {
  margin: 0 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 svg * {
  fill: #3c3c3c;
}

.emotion-3:hover svg *,
.emotion-3:focus svg * {
  fill: #3c3c3c;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-2 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-2 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-1 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-1 > * {
  fill: #808080;
}

<div
  className="emotion-9"
>
  <div
    aria-labelledby="modal-title-27618"
    className="emotion-8"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <article
      className="emotion-7"
      onClick={[Function]}
      role="document"
    >
      <header
        className="emotion-4"
        id="modal-title-27618"
      >
        <div
          className="emotion-3"
        >
          <p
            className="emotion-0"
            style={
              Object {
                "fontSize": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "inherit",
              }
            }
          >
            HIG Modal
          </p>
          <button
            className="emotion-2"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            title="Close"
          >
            <svg
              className="emotion-1"
              height="16px"
              viewBox="0 0 16 16"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.4 2.4l-.8-.8L8 7.3 2.4 1.6l-.8.8L7.3 8l-5.7 5.6.8.8L8 8.7l5.6 5.7.8-.8L8.7 8l5.7-5.6z"
              />
            </svg>
          </button>
        </div>
      </header>
      <section
        className="emotion-6"
      >
        <div
          className="emotion-5"
        />
      </section>
    </article>
  </div>
</div>
`;

exports[`modal/Modal integration renders with a custom css class name 1`] = `
.emotion-9 {
  color: #3c3c3c;
  opacity: 1;
  pointer-events: visible;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.emotion-8 {
  background-color: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 10001;
}

.emotion-7 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 50%;
  height: 300px;
  width: 400px;
  opacity: 1;
  outline: none;
  position: fixed;
  top: 128px;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  z-index: 1001;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  min-height: 152px;
}

.emotion-5 {
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: auto;
  overflow-y: auto;
  padding: 24px;
}

.emotion-4 {
  font-size: 20px;
  font-weight: 600;
  line-height: 1.66666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  min-height: 60px;
  z-index: 1002;
}

.emotion-3 {
  margin: 0 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 svg * {
  fill: #3c3c3c;
}

.emotion-3:hover svg *,
.emotion-3:focus svg * {
  fill: #3c3c3c;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-2 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-2 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-1 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-1 > * {
  fill: #808080;
}

<div
  className="emotion-9 custom-class"
>
  <div
    aria-labelledby="modal-title-58762"
    className="emotion-8 custom-class__modal-overlay"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <article
      className="emotion-7 custom-class__modal-window"
      onClick={[Function]}
      role="document"
    >
      <header
        className="emotion-4 custom-class__modal-header"
        id="modal-title-58762"
      >
        <div
          className="emotion-3 custom-class__modal-header-content"
        >
          <p
            className="emotion-0"
            style={
              Object {
                "fontSize": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "inherit",
              }
            }
          >
            HIG Modal
          </p>
          <button
            className="emotion-2"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            title="Close"
          >
            <svg
              className="emotion-1"
              height="16px"
              viewBox="0 0 16 16"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.4 2.4l-.8-.8L8 7.3 2.4 1.6l-.8.8L7.3 8l-5.7 5.6.8.8L8 8.7l5.6 5.7.8-.8L8.7 8l5.7-5.6z"
              />
            </svg>
          </button>
        </div>
      </header>
      <section
        className="emotion-6 custom-class__modal-body"
      >
        <div
          className="emotion-5 custom-class__modal-body-content"
        />
      </section>
    </article>
  </div>
</div>
`;

exports[`modal/Modal integration renders with styles customized 1`] = `
.emotion-8 {
  background-color: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 10001;
}

.emotion-7 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 50%;
  height: 300px;
  width: 400px;
  opacity: 1;
  outline: none;
  position: fixed;
  top: 128px;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  z-index: 1001;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  min-height: 152px;
}

.emotion-5 {
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: auto;
  overflow-y: auto;
  padding: 24px;
}

.emotion-4 {
  font-size: 20px;
  font-weight: 600;
  line-height: 1.66666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  min-height: 60px;
  z-index: 1002;
}

.emotion-3 {
  margin: 0 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 svg * {
  fill: #3c3c3c;
}

.emotion-3:hover svg *,
.emotion-3:focus svg * {
  fill: #3c3c3c;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-2 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-2 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-1 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-1 > * {
  fill: #808080;
}

.emotion-9 {
  color: aliceblue;
  opacity: 1;
  pointer-events: visible;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

<div
  className="emotion-9"
>
  <div
    aria-labelledby="modal-title-70232"
    className="emotion-8"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <article
      className="emotion-7"
      onClick={[Function]}
      role="document"
    >
      <header
        className="emotion-4"
        id="modal-title-70232"
      >
        <div
          className="emotion-3"
        >
          <p
            className="emotion-0"
            style={
              Object {
                "fontSize": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "inherit",
              }
            }
          >
            HIG Modal
          </p>
          <button
            className="emotion-2"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            title="Close"
          >
            <svg
              className="emotion-1"
              height="16px"
              viewBox="0 0 16 16"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.4 2.4l-.8-.8L8 7.3 2.4 1.6l-.8.8L7.3 8l-5.7 5.6.8.8L8 8.7l5.6 5.7.8-.8L8.7 8l5.7-5.6z"
              />
            </svg>
          </button>
        </div>
      </header>
      <section
        className="emotion-6"
      >
        <div
          className="emotion-5"
        />
      </section>
    </article>
  </div>
</div>
`;
